--- a/.pylintrc
+++ b/.pylintrc
@@ -416,11 +416,12 @@ disable=raw-checker-failed,
         useless-suppression,
         deprecated-pragma,
         use-symbolic-message-instead,
-	  too-many-lines,
-	  trailing-whitespace,
-	  line-too-long,
-	  import-error,
-	  too-few-public-methods
+        too-many-lines,
+        trailing-whitespace,
+        line-too-long,
+        import-error,
+        too-few-public-methods,
+
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
